# ai-games

./: README.md
.github/workflows/: release-apk.yml
deploy/nginx/: escape-room-doors.conf  garden-logic.conf
games/ai-gf/: README.md  design.md  index.html  sw.js
games/ai-gf/src/: app.js  styles.css
games/ai-gf/tests/: runtime-smoke.test.mjs  static.test.mjs
games/archive13-escape/: README.md  design.md  project.godot
games/archive13-escape/scenes/: main.tscn
games/archive13-escape/scripts/: main.gd
games/archive13-escape/test/: smoke.gd
games/escape-room-doors/: README.md  design.md  index.html
games/garden-logic/: README.md  design.md  index.html
games/night-market-dash/: README.md  design.md  index.html
games/night-market-dash-godot/: README.md  design.md  project.godot  study-notes.md
games/night-market-dash-godot/scenes/: main.tscn
games/night-market-dash-godot/scripts/: main.gd
ibkr-bot/: .env.example  .gitignore  README.md  pyproject.toml
ibkr-bot/deploy/headless/: README.md  ibc-paper.ini  install-userland.sh  start-gateway-paper.sh
ibkr-bot/src/ibkr_bot/: __init__.py  alerts.py  config.py  main.py  models.py  risk.py  storage.py
ibkr-bot/src/ibkr_bot/broker/: __init__.py  ibkr.py
ibkr-bot/src/ibkr_bot/strategy/: __init__.py  base.py  moving_average.py
ibkr-bot/tests/: test_risk.py  test_strategy.py
skills/godot-game-prototyper/: SKILL.md
skills/godot-game-prototyper/agents/: openai.yaml
