[project]
name = "ibkr-bot"
version = "0.1.0"
description = "Conservative IBKR paper-trading bot skeleton with risk controls and audit logs."
requires-python = ">=3.11"
dependencies = [
  "ib-insync>=0.9.86",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
ibkr-bot = "ibkr_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

